fixed the spacing

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -30,8 +30,8 @@ body {
     background-color: rgba(255, 255, 255, 0.7);
     color: black;
     border-radius: 32px;
-    border: 1px solid #FDFFC4;
     border: 3px solid #F088A4;
+    margin-top: 8px;
   }
 
   .btn {
